# VideoInfoReader

./: CMakeLists.txt  main.cpp
